fix alignment issue due to box model mismatch

--- a/src/image-slider/image-slider.less
+++ b/src/image-slider/image-slider.less
@@ -38,11 +38,12 @@ image-slider {
     content: '«';
     line-height: 20px;
     text-align: center;
+    font-size: 16px;
+    font-family: arial;
     position: absolute;
     right: 0; 
     bottom: calc(50% - 5px);
-    width: 9px; 
-    height: 20px;
+    width: 12px;
     padding: 5px;
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
@@ -51,6 +52,7 @@ image-slider {
     cursor: pointer;
     -webkit-filter: drop-shadow(0 0 2px black);
     filter: drop-shadow(0 0 2px black);
+    box-sizing: border-box;
   }
 
   img {
